feat: 完成导购问答流与知识库更新